# lib/db/src/schema/index.ts
@@ -1,3 +1,4 @@
 export * from "./vendors";
 export * from "./products";
 export * from "./email-verifications";
+export * from "./establishments";
